--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
-    "prosemirror-model": "1.18.1"
+    "prosemirror-model": "1.18.1",
+    "prosemirror-schema-list": "^1.3.0"
   }
 }
